css/index.css
/* ... */
.n:nth-of-type(29){-webkit-animation:animate_29 30s ease-in-out infinite;animation:animate_29 30s ease-in-out infinite}
@-webkit-keyframes animate_29{
0%{transform:rotateY(90deg)}
93.3333333333%{transform:rotateY(90deg)}
95%{transform:rotateY(0)}
96.6666666667%{transform:rotateY(-90deg)}
100%{transform:rotateY(-90deg)}
}
@keyframes animate_29{
0%{transform:rotateY(90deg)}
93.3333333333%{transform:rotateY(90deg)}
95%{transform:rotateY(0)}
96.6666666667%{transform:rotateY(-90deg)}
100%{transform:rotateY(-90deg)}
}
.n:nth-of-type(30){-webkit-animation:animate_30 30s ease-in-out infinite;animation:animate_30 30s ease-in-out infinite}
#overlay svg{display:flex;margin:auto;width:100vw;height:100%;justify-content:center;align-items:center}
g{justify-content:center;align-items:center}
g>text{text-anchor:middle;font-size:400px;font-family:Overpass Mono,monospace;fill:hsla(210,100%,75%,.85);opacity:0;-webkit-animation-name:opac;animation-name:opac;-webkit-animation-duration:4s;animation-duration:4s;-webkit-animation-timing-function:linear;animation-timing-function:linear;-webkit-animation-iteration-count:1;animation-iteration-count:1}
g>text:nth-child(1){-webkit-animation-delay:0s;animation-delay:0s}
g>text:nth-child(2){-webkit-animation-delay:1s;animation-delay:1s}
g>text:nth-child(3){-webkit-animation-delay:2s;animation-delay:2s}
g>text:nth-child(4){-webkit-animation-delay:3s;animation-delay:3s}
@-webkit-keyframes opac{
0%{opacity:0}
5%{opacity:1}
10%{opacity:1}
15%{opacity:0}
100%{opacity:0}
}
@keyframes opac{
0%{opacity:0}
5%{opacity:1}
10%{opacity:1}
15%{opacity:0}
100%{opacity:0}
}
#overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.5);display:none;justify-content:center;align-items:center;z-index:9999}
#svg-container{position:relative;width:100%;height:100%}
#my-svg{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%)}
@-webkit-keyframes animate_30{
0%{transform:rotateY(90deg)}
96.6666666667%{transform:rotateY(90deg)}
98.3333333333%{transform:rotateY(0)}
100%{transform:rotateY(-90deg)}
100%{transform:rotateY(-90deg)}
}
@keyframes animate_30{
0%{transform:rotateY(90deg)}
96.6666666667%{transform:rotateY(90deg)}
98.3333333333%{transform:rotateY(0)}
100%{transform:rotateY(-90deg)}
100%{transform:rotateY(-90deg)}
}
.leaderboard{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:60vw;height:auto;background:linear-gradient(to bottom,#3a404d,#181c26);border-radius:10px;box-shadow:0 7px 30px rgba(62,9,11,.3);overflow: hidden;}
.leaderboard h1{font-size:24px;color:#e1e1e1;padding:12px 13px 18px}
.leaderboard h1 svg{width:25px;height:26px;position:relative;top:3px;margin-right:6px;vertical-align:baseline}
.leaderboard ol{counter-reset:leaderboard;overflow-y: auto;max-height:70vh;}
.leaderboard ol li{position:relative;z-index:1;font-size:14px;counter-increment:leaderboard;padding:18px 10px 18px 50px;cursor:pointer;-webkit-backface-visibility:hidden;backface-visibility:hidden;transform:translateZ(0) scale(1,1)}
.leaderboard ol li::before{content:counter(leaderboard);position:absolute;z-index:2;top:15px;left:15px;width:20px;height:20px;line-height:20px;color:#c24448;background:#fff;border-radius:20px;text-align:center}
.leaderboard ol li mark{position:absolute;z-index:2;top:0;left:0;width:100%;height:100%;padding:18px 10px 18px 50px;margin:0;background:0 0;color:#fff}
.leaderboard ol li mark::after,.leaderboard ol li mark::before{content:"";position:absolute;z-index:1;bottom:-11px;left:-9px;border-top:10px solid #c24448;border-left:10px solid transparent;transition:all .1s ease-in-out;opacity:0}
.leaderboard ol li mark::after{left:auto;right:-9px;border-left:none;border-right:10px solid transparent}
.leaderboard ol li small{position:relative;z-index:2;display:block;text-align:right}
.leaderboard ol li::after{content:"";position:absolute;z-index:1;top:0;left:0;width:100%;height:100%;background:#fa6855;box-shadow:0 3px 0 rgba(0,0,0,.08);transition:all .3s ease-in-out;opacity:0}
.leaderboard ol li:nth-child(1){background:#fa6855}
.leaderboard ol li:nth-child(1)::after{background:#fa6855}
.leaderboard ol li:nth-child(2){background:#e0574f}
.leaderboard ol li:nth-child(2)::after{background:#e0574f;box-shadow:0 2px 0 rgba(0,0,0,.08)}
.leaderboard ol li:nth-child(2) mark::after,.leaderboard ol li:nth-child(2) mark::before{border-top:6px solid #ba4741;bottom:-7px}
.leaderboard ol li:nth-child(3){background:#d7514d}
.leaderboard ol li:nth-child(3)::after{background:#d7514d;box-shadow:0 1px 0 rgba(0,0,0,.11)}
.leaderboard ol li:nth-child(3) mark::after,.leaderboard ol li:nth-child(3) mark::before{border-top:2px solid #b0433f;bottom:-3px}
.leaderboard ol li:nth-child(4){background:#cd4b4b}
.leaderboard ol li:nth-child(4)::after{background:#cd4b4b;box-shadow:0 -1px 0 rgba(0,0,0,.15)}
.leaderboard ol li:nth-child(4) mark::after,.leaderboard ol li:nth-child(4) mark::before{top:-7px;bottom:auto;border-top:none;border-bottom:6px solid #a63d3d}
.leaderboard ol li:nth-child(5){background:#c24448;border-radius:0 0 10px 10px}
.leaderboard ol li:nth-child(5)::after{background:#c24448;box-shadow:0 -2.5px 0 rgba(0,0,0,.12);border-radius:0 0 10px 10px}
.leaderboard ol li:nth-child(5) mark::after,.leaderboard ol li:nth-child(5) mark::before{top:-9px;bottom:auto;border-top:none;border-bottom:8px solid #993639}
.leaderboard ol li:hover{z-index:2;overflow:visible}
.leaderboard ol li:hover::after{opacity:1;transform:scaleX(1.06) scaleY(1.03)}
.leaderboard ol li:hover mark::after,.leaderboard ol li:hover mark::before{opacity:1;transition:all .35s ease-in-out}
.the-most{position:fixed;z-index:1;bottom:0;left:0;width:50vw;max-width:200px;padding:10px}
.the-most img{max-width:100%}
@media (max-width:768px){
#video{width:100%;position:unset}
#video iframe{height:auto;width:100%}
.content{height:100vh}
#canvas{top:10vh}
#item-image{top:10vh}
#countdown-canvas{top:0}
.leaderboard{width:80vw}
}
/* ... */

